--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,15 @@
 </head>
 <body>
 	<h1 class="header">Ahnyeong</h1>
+	<div>
+		Change Title: <input type="text" class="inputField">
+	</div>
 	<div class="codeContainer">
 		<pre>Console:</pre>
 		<pre class="code">Stuff loading here...</pre>
 	</div>
 </body>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="main.js"></script>
 <link rel="stylesheet" type="text/css" href="styles.css">
 </html>
