--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 	<title>Hello</title>
 </head>
 <body>
-	<h1 class="header">Ahnyeong</h1>
+	<h1 class="header">Sup</h1>
 	<div>
 		Change Title: <input type="text" class="inputField">
 	</div>
@@ -15,5 +15,6 @@
 </body>
 
 <script src="main.js"></script>
+<script src="fetch.js"></script>
 <link rel="stylesheet" type="text/css" href="styles.css">
 </html>
