--- a/src/redditTiles/reddit_tiles.html
+++ b/src/redditTiles/reddit_tiles.html
@@ -12,5 +12,6 @@
 	<div class="tileContainer">
 		<span>Images go here...<span>
 	</div>
+	<script type="text/javascript" src="main.js"></script>
 </body>
 </html>
