--- a/src/index.html
+++ b/src/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Hello</title>
-</head>
-<body>
-	<h1 class="header">Sup</h1>
-	<div>
-		Change Title: <input type="text" class="inputField">
-	</div>
-	<div class="codeContainer">
-		<pre>Console:</pre>
-		<pre class="code">Stuff loading here...</pre>
-	</div>
-</body>
+	<head>
+		<title>Hello</title>
+	</head>
+	<body>
+		<h1 class="header">Hiyas</h1>
+		<div>
+			Change Title: <input type="text" class="inputField">
+		</div>
+		<div class="codeContainer">
+			<pre>Console:</pre>
+			<pre class="code">Stuff loading here...</pre>
+		</div>
+	</body>
 
-<script src="main.js"></script>
-<script src="fetch.js"></script>
-<link rel="stylesheet" type="text/css" href="styles.css">
+	<script src="main.js"></script>
+	<script src="fetch.js"></script>
+	<link rel="stylesheet" type="text/css" href="styles.css">
 </html>
